--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,5 @@ fontdrasil = "0.0.1"
 fontir = "0.0.1"
 kurbo = "0.11.1"
 norad = "0.14.2"
+tiny-skia = "0.11.4"
 
-path-bool = {git = "https://github.com/GraphiteEditor/Graphite"}
-resvg = { version = "0.44.0", default-features = false }
